--- a/index.html
+++ b/index.html
@@ -20,28 +20,19 @@
   
 </head>
 <body>
-<section class="cid-qy24jeL7PO" id="content13-2" data-rv-view="16">
+<section class="mbr-section article content1 cid-qy2bPo8Kck" id="content1-a" data-rv-view="133">
     
+     
+
     <div class="container">
-            <div class="media-container-row" style="width: 100%;">
-                <div class="img-item item1" style="width: 105%;">
-                    <a href="page1.html"><img src="assets/images/steve-700x366.jpg" alt="" title="" media-simple="true"></a>
-                    <div class="img-caption">
-                        <p class="mbr-fonts-style align-center mbr-black display-7">Steve Jobes</p>
-                    </div>
-                </div>
-                <div class="img-item">
-                    <a href="page2.html"><img src="assets/images/20162f022f012fd62fbillgatesms.c1d8e-1190x674.jpg" alt="" title="" media-simple="true"></a>
-                    <div class="img-caption">
-                        <p class="mbr-fonts-style align-center mbr-black display-7">Bill Gates</p>
-                    </div>
-                </div>
-            </div>
+        <div class="media-container-row">
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-5"><p><a href="page3.html" class="text-black">technology</a></p><p><a href="page4.html" class="text-black">Bussiness</a></p><p><a href="page5.html" class="text-black">Science</a></p><p><a href="page6.html" class="text-black">Sports</a></p><p><a href="page7.html" class="text-black">Greate Indian ( Swami Vivekananda )</a></p><p><a href="page8.html" class="text-black">Actors</a></p><p><br></p></div>
+        </div>
     </div>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
