--- a/index.html
+++ b/index.html
@@ -20,19 +20,21 @@
   
 </head>
 <body>
-<section class="mbr-section article content1 cid-qy2bPo8Kck" id="content1-a" data-rv-view="133">
+<section class="mbr-section article content9 cid-qy83clW7t8" id="content9-2e" data-rv-view="30">
     
      
 
     <div class="container">
-        <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-5"><p><a href="page3.html" class="text-black">technology</a></p><p><a href="page4.html" class="text-black">Bussiness</a></p><p><a href="page5.html" class="text-black">Science</a></p><p><a href="page6.html" class="text-black">Sports</a></p><p><a href="page7.html" class="text-black">Greate Indian ( Swami Vivekananda )</a></p><p><a href="page8.html" class="text-black">Actors</a></p><p><br></p></div>
+        <div class="inner-container" style="width: 100%;">
+            <hr class="line" style="width: 10%;">
+            <div class="section-text align-center mbr-fonts-style display-5">टेक्नोलॉजी क्षेत्र की सफलता स्टोरी<br><br>बिज़नेस क्षेत्र की सफलता स्टोरी<br><br>खिलाडी क्षेत्र की सफलता स्टोरी<br><br>वैज्ञानिक क्षेत्र की सफलता स्टोरी<br><br>अभिनेता क्षेत्र की सफलता स्टोरी<br><br>सबसे ज्यादा बार पढ़ी हुई स्टोरी&nbsp;<br><br><br></div>
+            <hr class="line" style="width: 10%;">
         </div>
-    </div>
+        </div>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
