--- a/page7.html
+++ b/page7.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-<section class="cid-qy5TqJDgau" id="content13-21" data-rv-view="158">
+<section class="cid-qy5TqJDgau" id="content13-21" data-rv-view="56">
     
     <div class="container">
             <div class="media-container-row" style="width: 100%;">
@@ -41,7 +41,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/h">how to make your own website for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/g">how to create your own website for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
