--- a/page3.html
+++ b/page3.html
@@ -20,18 +20,18 @@
   
 </head>
 <body>
-<section class="cid-qy2bIKJzq7" id="content13-9" data-rv-view="42">
+<section class="cid-qy2bIKJzq7" id="content13-9" data-rv-view="196">
     
     <div class="container">
             <div class="media-container-row" style="width: 100%;">
                 <div class="img-item item1" style="width: 105%;">
-                    <a href="page1.html"><img src="assets/images/steve-700x3660.jpg" alt="" title="" media-simple="true"></a>
+                    <a href="page1.html"><img src="assets/images/steve-700x366.jpg" alt="" title="" media-simple="true"></a>
                     <div class="img-caption">
                         <p class="mbr-fonts-style align-center mbr-black display-7">Steve Jobes (&nbsp;स्टीव जॉब्स )</p>
                     </div>
                 </div>
                 <div class="img-item">
-                    <a href="page2.html"><img src="assets/images/20162f022f012fd62fbillgatesms.c1d8e-1190x6741.jpg" alt="" title="" media-simple="true"></a>
+                    <a href="page2.html"><img src="assets/images/20162f022f012fd62fbillgatesms.c1d8e-1190x674.jpg" alt="" title="" media-simple="true"></a>
                     <div class="img-caption">
                         <p class="mbr-fonts-style align-center mbr-black display-7">Bill Gates (&nbsp;बिल गेट्स )</p>
                     </div>
@@ -40,8 +40,28 @@
     </div>
 </section>
 
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="cid-qyhhBJv0XS" id="content13-2i" data-rv-view="198">
+    
+    <div class="container">
+            <div class="media-container-row" style="width: 100%;">
+                <div class="img-item item1" style="width: 105%;">
+                    <a href="page27.html"><img src="assets/images/236-2450x1455.jpg" alt="" title="" media-simple="true"></a>
+                    <div class="img-caption">
+                        <p class="mbr-fonts-style align-center mbr-black display-7">Mark Zukerburg ( मार्क जुकरबर्ग&nbsp;)</p>
+                    </div>
+                </div>
+                <div class="img-item">
+                    <a href="page28.html"><img src="assets/images/sundar-pichai-google-ceo-1000x667.jpg" alt="" title="" media-simple="true"></a>
+                    <div class="img-caption">
+                        <p class="mbr-fonts-style align-center mbr-black display-7">Sundar Pichai (&nbsp;सुंदर पिचाई )</p>
+                    </div>
+                </div>
+            </div>
+    </div>
+</section>
 
-  <section class="engine"><a href="https://mobirise.co/c">website maker</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
