--- a/page7.html
+++ b/page7.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo4.png" type="image/x-icon">
   <meta name="description" content="Site Generator Description">
-  <title>Great Indian&nbsp;</title>
+  <title>Live</title>
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -20,20 +20,20 @@
   
 </head>
 <body>
-<section class="cid-qy5TqJDgau" id="content13-21" data-rv-view="56">
+<section class="cid-qyiQXoTo64" id="content13-2x" data-rv-view="212">
     
     <div class="container">
             <div class="media-container-row" style="width: 100%;">
-                <div class="img-item item1" style="width: 105%;">
-                    <a href="page18.html"><img src="assets/images/d243a03853a44721585190b2ab8f3a2a-728x355.jpg" alt="" title="" media-simple="true"></a>
+                <div class="img-item item1" style="width: 112%;">
+                    <a href="page31.html"><img src="assets/images/sandeep-maheshwari-seminars-e1436094811200-999x563.jpg" alt="" title="" media-simple="true"></a>
                     <div class="img-caption">
-                        <p class="mbr-fonts-style align-center mbr-black display-7">Swami Vivekananda (&nbsp;स्वामी विवेकानंद )</p>
+                        <p class="mbr-fonts-style align-center mbr-black display-7">संदीप माहेश्वरी<br>Oct 17, 2017</p>
                     </div>
                 </div>
                 <div class="img-item">
-                    <a href="page22.html"><img src="assets/images/3fd2249c-726e-11e6-af03-e675d0741f8a-1280x720-980x551.jpg" alt="" title="" media-simple="true"></a>
+                    <a href="page17.html"><img src="assets/images/maxresdefault-1280x720.jpg" alt="" title="" media-simple="true"></a>
                     <div class="img-caption">
-                        <p class="mbr-fonts-style align-center mbr-black display-7">Mother Teresa (&nbsp;मदर टेरेसा )</p>
+                        <p class="mbr-fonts-style align-center mbr-black display-7">डॉ ए. पी. जे. अब्दुल कलाम<br>Oct 16, 2017</p>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/g">how to create your own website for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
