--- a/page6.html
+++ b/page6.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-<section class="cid-qy2kLKz8gy" id="content13-q" data-rv-view="52">
+<section class="cid-qy2kLKz8gy" id="content13-q" data-rv-view="208">
     
     <div class="container">
             <div class="media-container-row" style="width: 100%;">
@@ -40,7 +40,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="cid-qy5DIFI7ki" id="content13-x" data-rv-view="54">
+<section class="engine"><a href="https://mobirise.co/h">how to make a website</a></section><section class="cid-qy5DIFI7ki" id="content13-x" data-rv-view="210">
     
     <div class="container">
             <div class="media-container-row" style="width: 100%;">
