--- a/page7.html
+++ b/page7.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-<section class="cid-qyiQXoTo64" id="content13-2x" data-rv-view="212">
+<section class="cid-qyiQXoTo64" id="content13-2x" data-rv-view="363">
     
     <div class="container">
             <div class="media-container-row" style="width: 100%;">
@@ -41,7 +41,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/l">bootstrap themes</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
