--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
   
 </head>
 <body>
-<section class="cid-qyi9owwHpd" id="content13-2u" data-rv-view="9">
+<section class="cid-qyi9owwHpd" id="content13-2u" data-rv-view="178">
     
     <div class="container">
             <div class="media-container-row" style="width: 100%;">
                 <div class="img-item item1" style="width: 105%;">
-                    <a href="page31.html"><img src="assets/images/img-1011x551.jpg" alt="" title="" media-simple="true"></a>
+                    <a href="page5.html"><img src="assets/images/img-1011x551.jpg" alt="" title="" media-simple="true"></a>
                     <div class="img-caption">
                         <p class="mbr-fonts-style align-center mbr-black display-7">Live -&nbsp;हर रोज एक नई सफलता की स्टोरी </p>
                     </div>
                 </div>
                 <div class="img-item">
-                    <a href="page31.html"><img src="assets/images/img-20171006-1012x538.jpg" alt="" title="" media-simple="true"></a>
+                    <a href="page3.html"><img src="assets/images/img-20171006-1012x538.jpg" alt="" title="" media-simple="true"></a>
                     <div class="img-caption">
-                        <p class="mbr-fonts-style align-center mbr-black display-7">सफल होने के लिए आपको ये बाते हमेशा याद रखनी हे&nbsp;</p>
+                        <p class="mbr-fonts-style align-center mbr-black display-7">Live - सफलता की स्टोरी वीडियो के द्वारा</p>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co">Mobirise</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
