--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-<section class="cid-qyi9owwHpd" id="content13-2u" data-rv-view="178">
+<section class="cid-qyi9owwHpd" id="content13-2u" data-rv-view="8">
     
     <div class="container">
             <div class="media-container-row" style="width: 100%;">
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="img-item">
-                    <a href="page3.html"><img src="assets/images/img-20171006-1012x538.jpg" alt="" title="" media-simple="true"></a>
+                    <a href="index.html"><img src="assets/images/img-20171006-1012x538.jpg" alt="" title="" media-simple="true"></a>
                     <div class="img-caption">
                         <p class="mbr-fonts-style align-center mbr-black display-7">Live - सफलता की स्टोरी वीडियो के द्वारा</p>
                     </div>
@@ -41,7 +41,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/e">web page design software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
