--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-<section class="mbr-section article content9 cid-qynrqcWUYI" id="content9-3x" data-rv-view="185">
+<section class="mbr-section article content9 cid-qynrqcWUYI" id="content9-3x" data-rv-view="15">
     
      
 
@@ -253,7 +253,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/d">web page software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/h">make your own website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
