--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-<section class="mbr-section article content9 cid-qynrqcWUYI" id="content9-3x" data-rv-view="54">
+<section class="mbr-section article content9 cid-qynrqcWUYI" id="content9-3x" data-rv-view="154">
     
      
 
@@ -253,7 +253,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/b">free web page creator</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
