--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-<section class="mbr-section article content9 cid-qAh1A1Uvk4" id="content9-6x" data-rv-view="323">
+<section class="mbr-section article content9 cid-qAh1A1Uvk4" id="content9-6x" data-rv-view="22">
     
      
 
@@ -34,7 +34,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
