--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
   
 </head>
 <body>
-<section class="mbr-section article content9 cid-qAh1A1Uvk4" id="content9-6x" data-rv-view="246">
+<section class="mbr-section article content9 cid-qAh1A1Uvk4" id="content9-6x" data-rv-view="57">
     
      
 
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 10%;">
-            <div class="section-text align-center mbr-fonts-style display-5">APP UNDER CONTRUCTION PLEASE WAIT 5 HOURS WE ARE UPDATE APP THEME AND SUCCESS STORY<br><br><br></div>
+            <div class="section-text align-center mbr-fonts-style display-5">Please Update This App From Playstore</div>
             <hr class="line" style="width: 10%;">
         </div>
         </div>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
