--- a/page26.html
+++ b/page26.html
@@ -20,8 +20,28 @@
   
 </head>
 <body>
+<section class="cid-qAhkhrMp3W" id="content13-7r" data-rv-view="179">
+    
+    <div class="container">
+            <div class="media-container-row" style="width: 100%;">
+                <div class="img-item item1" style="width: 105%;">
+                    <a href="page24.html"><img src="assets/images/rajnikant-1280x720.jpg" alt="" title="" media-simple="true"></a>
+                    <div class="img-caption">
+                        <p class="mbr-fonts-style align-center mbr-black display-7">सुपरस्टार रजनीकांत<br>5 Nov, 2017</p>
+                    </div>
+                </div>
+                <div class="img-item">
+                    <img src="assets/images/untitled-784x384.png" alt="" title="" media-simple="true">
+                    <div class="img-caption">
+                        <p class="mbr-fonts-style align-center mbr-black display-7">आपको हमारे APP की स्टोरी पसंद आ रही हे तो प्लीज हमे 5 स्टार दे&nbsp;<br></p>
+                    </div>
+                </div>
+            </div>
+    </div>
+</section>
 
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
+
+  <section class="engine"><a href="https://mobirise.co/i">build your own website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
